[MIG] hr_contract_multi_job: Migration to 15.0

--- a/hr_contract_multi_job/views/hr_contract_view.xml
+++ b/hr_contract_multi_job/views/hr_contract_view.xml
@@ -9,7 +9,7 @@
             <field name="job_id" position="attributes">
                 <attribute name="readonly">1</attribute>
             </field>
-            <group name="main_info" position="after">
+            <group name="salary_info" position="after">
                 <group name="group_contract" colspan="6">
                     <separator name="job_position" string="Job Positions" />
                     <field name="contract_job_ids" colspan="6" nolabel="1">
